--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       rel="stylesheet"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Momentum Financial</title>
+    <title>LP Forward Financial</title>
   </head>
 
   <body>
